# nodejs_binary-module-not-found

./: WORKSPACE  package.json
app/: BUILD.bazel  index.ts
